--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,10 +67,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
-
+    // coil
+    implementation("io.coil-kt:coil:1.3.0")
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.2.4"
 
